Add background colors and negotiate general spacing/placement of Display and Controls componenets, remove unnecessary files from public directory, import fonts, add icons for locking and display individual hex codes.

--- a/src/containers/Display/Display.css
+++ b/src/containers/Display/Display.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: space-around;
   height: max-content;
-  width: 60%;
+  width: 50%;
 }
 
 .swatch {
@@ -21,8 +21,9 @@
 }
 
 .hex-code {
-    display: inline-block;
-    font-size: 36px;
-    line-height: 100px;
-    vertical-align: text-bottom;
+  font-family: 'Source Code Pro', monospace;
+  display: inline-block;
+  font-size: 36px;
+  line-height: 100px;
+  vertical-align: text-bottom;
 }
