--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -1,22 +1,26 @@
+h1 {
+  font-family: 'Source Code Pro', monospace;
+  font-size: 68px;
+  display: inline;
+  background-color: #424A60;
+  color: #C8CAC8;
+  margin: 0px 0px 25px 0px;
+
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  background-color: ghostwhite;
 }
 
-.App-link {
-  color: #09d3ac;
+.top-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.controls-background {
+  background-color: #E8E8E8;
 }
