--- a/src/containers/Project/Project.css
+++ b/src/containers/Project/Project.css
@@ -7,10 +7,20 @@
 .project-wrapper > h3 {
   border: 1px solid black;
   height: 50px;
+  background-color: #7383C0;
 }
 
-.project-wrapper > h3:first-child {
-  background-color: #7383C0;
+.project-name-input {
+  text-align: left;
+  border: 1.75px solid black;
+  height: 50px;
+  width: 99%;
+  margin: 0px 0px 25px 0px;
+  padding: 0px 0px 0px 5px;
+}
+
+.project-name-input::placeholder {
+  color: black;
 }
 
 .Project {
@@ -23,4 +33,17 @@
   margin: 25px auto;
   min-height: 150px;
   width: 90%;
+}
+
+.Project > input {
+  width: 50px;
+  height: 50px;
+  /* margin: 0px 5px 0px 5px; */
+}
+
+.input-wrapper {
+  display: flex;
+  flex-direction: column;
+  margin: 65px 0px 0px 0px;
+
 }
