--- a/src/containers/Palettes/Palettes.css
+++ b/src/containers/Palettes/Palettes.css
@@ -1,4 +1,5 @@
 .Palettes > h3 {
+  background-color: #7383C0;
   height: 50px;
 }
 
@@ -7,7 +8,7 @@
   flex-direction: row;
   border: 1px solid black;
   height: max-content;
-  margin: 50px auto 25px auto;
+  margin: 50px 10px 25px auto;
   width: 40%;
   border: 1px solid black;
 }
