--- a/src/containers/Project/Project.css
+++ b/src/containers/Project/Project.css
@@ -1,3 +1,7 @@
+label {
+  font-size: 18px;
+}
+
 .project-wrapper {
   flex-direction: column;
   margin: 25px auto 0 auto;
@@ -5,9 +9,13 @@
 }
 
 .project-wrapper > h3 {
-  border: 1px solid black;
+  background-color: #424A60;
+  color: snow;
+  font-size: 28px;
   height: 50px;
-  background-color: #7383C0;
+  line-height: 45px;
+  padding: 2px 0 0 5px;
+  vertical-align: center;
 }
 
 .project-name-input {
@@ -24,7 +32,6 @@
 .Project {
   align-content: flex-start;
   background-color: #E8E8E8;
-  border: 1px solid black;
   display: flex;
   flex-direction: row;
   height: max-content;
@@ -36,12 +43,23 @@
 .Project > input {
   width: 50px;
   height: 50px;
-  /* margin: 0px 5px 0px 5px; */
 }
 
 .input-wrapper {
   display: flex;
   flex-direction: column;
-  margin: 65px 0px 0px 0px;
+  margin: 35px 0px 0px 0px;
+}
 
+.cross {
+  height: 50px;
+  padding: 60px 0 0 0;
+  width: 100px;
+}
+
+#trash,
+#update {
+  display: inline-block;
+  height: 30px;
+  width: 100px;
 }
