--- a/src/containers/Project/Project.css
+++ b/src/containers/Project/Project.css
@@ -14,8 +14,7 @@ label {
   font-size: 28px;
   height: 50px;
   line-height: 45px;
-  padding: 2px 0 0 5px;
-  vertical-align: center;
+  padding: 0 0 0 10px;
 }
 
 .project-name-input {
