Make minor adjustments to Palettes/Palette layout, Preview size and overall margins

--- a/src/containers/Controls/Controls.css
+++ b/src/containers/Controls/Controls.css
@@ -50,7 +50,7 @@ h3 {
 }
 
 .project-name-input {
-  background-image: none;
+  background-image: ;
   grid-area: c;
   text-align: left;
   height: 47px;
