--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -20,6 +20,7 @@ h1 {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  margin: 10px 70px;
 }
 
 .controls-background {
