Add bottom padding to last paragraph in Preview

--- a/src/containers/Palette/Palette.css
+++ b/src/containers/Palette/Palette.css
@@ -18,6 +18,10 @@
   width: 45%;
 }
 
+.palette-name-wrapper > h3 {
+  font-size: 18px;
+}
+
 .swatch-wrapper {
   display: flex;
   flex-direction: row;
