--- a/src/containers/Preview/Preview.css
+++ b/src/containers/Preview/Preview.css
@@ -33,7 +33,11 @@
   text-align: left;
 }
 
+p:last-child {
+  padding: 0 0 22px 0;
+}
+
 .page-footer {
-  height: 52px;
+  height: 30px;
   margin: 0 auto;
 }
