Add Source Code Pro to Project and Palette h3s

--- a/src/containers/Palettes/Palettes.css
+++ b/src/containers/Palettes/Palettes.css
@@ -9,6 +9,7 @@
 .Palettes > h3 {
   background-color: #7383C0;
   color: snow;
+  font-family: 'Source Code Pro', monospace;
   font-size: 21px;
   height: 50px;
   line-height: 50px;
