--- a/src/containers/Preview/Preview.css
+++ b/src/containers/Preview/Preview.css
@@ -10,12 +10,12 @@
 
 .page-header {
   height: 50px;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 36px;
   margin: 0 auto;
 }
 
-.page-png {
+.page-profile {
   float: left;
   height: 60px;
   margin: 0px 10px 0px 10px;
@@ -23,7 +23,7 @@
 }
 
 .page-title {
-  font-size: 28px;
+  font-size: 21px;
   margin: 5px 2px;
 }
 
@@ -34,7 +34,7 @@
 }
 
 p:last-child {
-  padding: 0 0 22px 0;
+  padding: 0 0 30px 0;
 }
 
 .page-footer {
