--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -20,6 +20,7 @@ label {
 }
 
 .project-name-input {
+  box-shadow: 3px 3px 7px #A9A9A9;
   font-size: 21px;
   height: 50px;
   margin: 0px 0px 25px 0px;
@@ -34,7 +35,7 @@ label {
 
 .Project {
   align-content: flex-start;
-  background-color: #E8E8E8;
+  background-color: rgba(240,240,240, 0.7);
   display: flex;
   flex-direction: row;
   height: max-content;
