--- a/src/components/Preview/Preview.css
+++ b/src/components/Preview/Preview.css
@@ -1,17 +1,18 @@
 .Preview {
+  box-shadow: 3px 3px 7px #A9A9A9;
   font-family: 'Roboto', sans-serif;
   width: 23%;
 }
 
 .page {
-  border: solid #E8E8E8 2px;
+  border: solid #808080 1px;
   height: 375px;
 }
 
 .page-header {
   height: 50px;
   font-size: 28px;
-  line-height: 36px;
+  line-height: 50px;
   margin: 0 auto;
 }
 
@@ -24,6 +25,7 @@
 
 .page-title {
   font-size: 21px;
+  line-height: 30px;
   margin: 5px 2px;
 }
 
@@ -34,10 +36,10 @@
 }
 
 p:last-child {
-  padding: 0 0 30px 0;
+  padding: 0 0 15px 0;
 }
 
 .page-footer {
-  height: 30px;
+  height: 24px;
   margin: 0 auto;
 }
