--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -36,6 +36,7 @@ label {
 .Project {
   align-content: flex-start;
   background-color: rgba(240,240,240, 0.7);
+  box-shadow: 1px 1px 4px #D3D3D3;
   display: flex;
   flex-direction: row;
   height: max-content;
