Update Controls button hover color to dark blue

--- a/src/components/Controls/Controls.css
+++ b/src/components/Controls/Controls.css
@@ -9,7 +9,7 @@ h3 {
 }
 
 button:hover {
-  background-color: #7383C0;
+  background-color: #424A60;
   border: 1px solid #424A60;
   color: ghostwhite;
   cursor: pointer;
