--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,12 +1,14 @@
-h1 {
+header {
   background-color: #424A60;
+}
+
+h1 {
   display: inline;
   color: #C8CAC8;
   font-family: 'Source Code Pro', monospace;
   font-size: 66px;
   line-height: 88px;
   margin: 0px 0px 25px 0px;
-
 }
 
 .App {
@@ -14,6 +16,11 @@ h1 {
   flex-direction: column;
   text-align: center;
   background-color: ghostwhite;
+}
+
+.header-img {
+  height: 50px;
+  margin: 0 20px 20px 20px;
 }
 
 .top-wrapper {
